Changed the formating of texts

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
 
-<div id="knowledge base"><h1 id="knowledge base" class="header"><a href="#knowledge base">knowledge base</a></h1></div>
+<div id="KNOWLEDGE BASE"><h1 id="KNOWLEDGE BASE" class="header"><a href="#KNOWLEDGE BASE">KNOWLEDGE BASE</a></h1></div>
 
 <p>
-*<a href="terminal_setup.html">terminal_setup.wiki</a>
 *<a href="setup.html">setup.wiki</a>
 *<a href="stage.html">stage.wiki</a>
 *<a href="browser_bugs.html">browser_bugs.wiki</a>
