--- a/phone_setup.html
+++ b/phone_setup.html
@@ -16,10 +16,18 @@ Copy data from device to device
 
 <li>
 Setup google authenticator on the new device
-    a. Go to all the services that are setup on google authenticator
-    b. Go to the 2FA page of the service
-    c. Set up google authenticator on the new device
 
+<ul>
+<li>
+Go to all the services that are setup on google authenticator
+
+<li>
+Go to the 2FA page of the service
+
+<li>
+Set up google authenticator on the new device
+
+</ul>
 <li>
 Check if all the important apps are working and not locked out
 
