--- a/practical_vim_notes.html
+++ b/practical_vim_notes.html
@@ -8,24 +8,24 @@
 </head>
 <body>
 
-<div id="practical vim notes"><h1 id="practical vim notes" class="header"><a href="#practical vim notes">practical vim notes</a></h1></div>
+<div id="PRACTICAL VIM NOTES"><h1 id="PRACTICAL VIM NOTES" class="header"><a href="#PRACTICAL VIM NOTES">PRACTICAL VIM NOTES</a></h1></div>
 
 <ul>
 <li>
-== <a href="the_vim_way.html">the_vim_way.wiki</a> ==
+<a href="the_vim_way.html">the_vim_way.wiki</a>
 
 <li>
-== Part I ==
+Part I
 
 <ul>
 <li>
-=== <a href="normal_mode.html">normal_mode.wiki</a> ===
+<a href="normal_mode.html">normal_mode.wiki</a>
 
 <li>
-=== <a href="insert_mode.html">insert_mode.wiki</a> ===
+<a href="insert_mode.html">insert_mode.wiki</a>
 
 <li>
-=== <a href="visual_mode.html">visual_mode.wiki</a> ===
+<a href="visual_mode.html">visual_mode.wiki</a>
 
 </ul>
 </ul>
