--- a/setup.html
+++ b/setup.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<div id="SETUP"><h1 id="SETUP" class="header"><a href="#SETUP">SETUP</a></h1></div>
+
 <ol>
 <li>
 Install chrome canary
