--- a/stage.html
+++ b/stage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div id="stage"><h1 id="stage" class="header"><a href="#stage">stage</a></h1></div>
+<div id="STAGE"><h1 id="STAGE" class="header"><a href="#STAGE">STAGE</a></h1></div>
 
 <ul>
 <li>
