unordered list for document links

--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
 
 <div id="KNOWLEDGE BASE"><h1 id="KNOWLEDGE BASE" class="header"><a href="#KNOWLEDGE BASE">KNOWLEDGE BASE</a></h1></div>
 
-<p>
-*<a href="setup.html">setup.wiki</a>
-*<a href="stage.html">stage.wiki</a>
-*<a href="browser_bugs.html">browser_bugs.wiki</a>
-*<a href="practical_vim_notes.html">practical_vim_notes.wiki</a>
-*<a href="phone_setup.html">phone_setup.wiki</a>
-</p>
+<ul>
+<li>
+<a href="setup.html">setup.wiki</a>
+
+<li>
+<a href="stage.html">stage.wiki</a>
+
+<li>
+<a href="browser_bugs.html">browser_bugs.wiki</a>
+
+<li>
+<a href="practical_vim_notes.html">practical_vim_notes.wiki</a>
+
+<li>
+<a href="phone_setup.html">phone_setup.wiki</a>
+
+</ul>
 
 </body>
 </html>
