Changed the list items

--- a/the_vim_way.html
+++ b/the_vim_way.html
@@ -9,12 +9,19 @@
 <body>
 
 <div id="The vim way"><h2 id="The vim way" class="header"><a href="#The vim way">The vim way</a></h2></div>
-<div id="The vim way-Tip 1 - The dot command"><h3 id="Tip 1 - The dot command" class="header"><a href="#The vim way-Tip 1 - The dot command" class="justcenter">Tip 1 - The dot command</a></h3></div>
+<ul>
+<li>
+Tip 1 - The dot command
+
 <ul>
 <li>
 repeat the last change(.)
-  === Tip 2 - Don't repeat yourself ===
 
+</ul>
+<li>
+Tip 2 <a href="-.html">-</a> Don't repeat yourself
+
+<ul>
 <li>
 append at the end(A)
 
@@ -23,8 +30,12 @@ new line above(O), new line below(o)
 
 <li>
 insert at the begininng of the line(I)
-  === Tip 3 - Take one step back, then three forward ===
 
+</ul>
+<li>
+Tip 3 - Take one step back, then three forward
+
+<ul>
 <li>
 (s) - (cl) - change letter
 
@@ -42,8 +53,12 @@ T {char} - find the next character to occurence of char backwards
 
 <li>
 repeat the last motion(;), in the reverse direction(,)
-  === Tip 4 - Act, repeat, reverse ===
 
+</ul>
+<li>
+Tip 4 - Act, repeat, reverse
+
+<ul>
 <li>
 (u) - undo last change
 
@@ -78,19 +93,28 @@ N to undo
 
 <li>
 u to undo
-  === Tip 5 - Find and replace by hand ===
 
 </ul>
+</ul>
+<li>
+Tip 5 - Find and replace by hand
+
+<ul>
 <li>
 (*) - search for word under cursor
 
 <li>
 (cw) - change word
-  === Tip 6 - Meet the dot formula ===
 
+</ul>
+<li>
+Tip 6 - Meet the dot formula
+
+<ul>
 <li>
 one keystroke for motion and one keystorke for change is optimal
 
+</ul>
 </ul>
 
 </body>
